@@ -888,6 +888,7 @@ gui.action.make_dirty.icon  = bullet_ball_glass_yellow.png
 gui.action.breakpoint_before.label = Breakpoint Before
 gui.action.breakpoint_before.icon  = breakpoint_up.png
 gui.action.breakpoint_before.tip   = Insert a breakpoint before the current operator.
+gui.action.breakpoint_before.acc   = shift F7
 
 gui.action.breakpoint_after.label = Breakpoint After
 gui.action.breakpoint_after.icon  = breakpoint_down.png
@@ -1526,7 +1527,7 @@ gui.dialog.confirm.save.message = Save changes to {0}?
 
 gui.dialog.close_all_results.title   = Close all results
 gui.dialog.close_all_results.icon    = help2.png
-gui.dialog.close_all_results.message = Do you really want to close all open results?
+gui.dialog.close_all_results.message = Do you really want to close all results?
 
 gui.dialog.confirm.save_before_remote_run.title   = Save Changes and run process on RapidAnalytics?
 gui.dialog.confirm.save_before_remote_run.icon    = floppy_disk.png
@@ -2038,8 +2039,8 @@ gui.dialog.update.tab.no_updates = All packages are up to date.
 gui.dialog.update.tab.no_search_results = The search returned no results.
 gui.dialog.update.tab.search.no_results = The search returned no results.
 
-gui.dialog.update.account_button.logged_in = You are logged in as {0}. (<a href=\"#\">Logout</a>)
-gui.dialog.update.account_button.logged_out = You are not logged in. (<a href=\"#\">Login</a>)
+gui.dialog.update.account_button.logged_in = You are logged in as {0}. (<a href\="\#">Logout</a>)
+gui.dialog.update.account_button.logged_out = You are not logged in. (<a href\="\#">Login</a>)
 
 ## ConfirmLicenseDialog
 
